tests/assembler/bad/bs_raw_65535.j
.class test
.super java/lang/Object

.const [mh] = MethodHandle invokeStatic Method LambdaTest1 lambda$main$0 (J)J
.bootstrap [bs:0] = Bootstrap [mh] [mh] :
.bootstrap [bs:65535] = Bootstrap [mh] [mh] :
.end class
